--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
+    "babel-eslint": "^6.0.4",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-eslint": "^6.0.4",
     "chai": "^3.5.0",
     "dotenv": "^2.0.0",
     "eslint": "^1.10.3",
@@ -27,7 +27,10 @@
   },
   "dependencies": {
     "babel-cli": "^6.14.0",
-    "babel-polyfill": "^6.13.0"
+    "babel-polyfill": "^6.13.0",
+    "bluebird": "^3.4.6",
+    "redis": "^2.6.2",
+    "uuid": "^2.0.3"
   },
   "author": "Chakrit Likitkhajorn",
   "license": "ISC",
